[dependencies]
bitflags = "2"
instant = "0.1"
lazy_static = "1"
libc = "0.2.169"
log = "0.4"
raw-window-handle = "0.6"
serde = { version = "1", optional = true, features = ["serde_derive"] }

[dev-dependencies]
image = "0.25.5"
simple_logger = "5.0"

[features]
default = ["x11"]
stdweb = ["std_web", "instant/stdweb"]
wayland = ["wayland-client", "sctk"]
web-sys = ["web_sys", "wasm-bindgen", "instant/wasm-bindgen"]
x11 = ["x11-dl", "mio", "mio-misc", "percent-encoding", "parking_lot"]

[lib]
name = "winit"
path = "Source/lib.rs"

[package]
authors = ["The winit contributors", "Pierre Krieger <pierre.krieger1708@gmail.com>"]
categories = ["gui"]
description = "Cross-platform window creation library."
documentation = "https://docs.rs/winit"
edition = "2018"
keywords = ["windowing"]
license-file = "LICENSE"
name = "tauri-winit"
readme = "README.md"
repository = "https://github.com/rust-windowing/winit"
version = "0.24.1"

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
features = ["serde", "web-sys"]
targets = ["i686-pc-windows-msvc", "x86_64-pc-windows-msvc", "i686-unknown-linux-gnu", "x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "wasm32-unknown-unknown"]

[target]

[target.'cfg(any(target_os = "ios", target_os = "macos"))']

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
objc = "0.2.7"

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))']

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
cairo-rs = "0.20"
gdk = "0.18"
gdk-pixbuf = "0.20"
gio = "0.20"
glib = "0.20"
gtk = "0.18"
image = "0.25"
mio = { version = "1.0", features = ["os-ext"], optional = true }
mio-misc = { version = "2.0", optional = true }
parking_lot = { version = "0.12.3", optional = true }
percent-encoding = { version = "2.3", optional = true }
sctk = { package = "smithay-client-toolkit", version = "0.12.3", optional = true }
wayland-client = { version = "0.31", features = [ "dlopen"] , optional = true }
x11-dl = { version = "2.21.0", optional = true }

[target.'cfg(target_arch = "wasm32")']

[target.'cfg(target_arch = "wasm32")'.dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies.std_web]
features = ["experimental_features_which_may_break_on_minor_version_bumps"]
optional = true
package = "stdweb"
version = "=0.4.20"

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
optional = true
version = "0.2.100"

[target.'cfg(target_arch = "wasm32")'.dependencies.web_sys]
features = [
    'console',
    "AddEventListenerOptions",
    'CssStyleDeclaration',
    'BeforeUnloadEvent',
    'Document',
    'DomRect',
    'Element',
    'Event',
    'EventTarget',
    'FocusEvent',
    'HtmlCanvasElement',
    'HtmlElement',
    'KeyboardEvent',
    'MediaQueryList',
    'MediaQueryListEvent',
    'MouseEvent',
    'Node',
    'PointerEvent',
    'Window',
    'WheelEvent'
]
optional = true
package = "web-sys"
version = "0.3.77"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_log = "1.0"

[target.'cfg(target_os = "android")']

[target.'cfg(target_os = "android")'.dependencies]
ndk = "0.9"
ndk-glue = "0.7"
ndk-sys = "0.6.0"

[target.'cfg(target_os = "macos")']

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
core-foundation = "0.10"
core-graphics = "0.24"
dispatch = "0.2.0"
scopeguard = "1.2"

[target.'cfg(target_os = "macos")'.dependencies.core-video-sys]
default_features = false
features = ["display_link"]
version = "0.1.4"

[target.'cfg(target_os = "windows")']

[target.'cfg(target_os = "windows")'.dependencies]
parking_lot = "0.12"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
features = [
    "combaseapi",
    "commctrl",
    "dwmapi",
    "errhandlingapi",
    "imm",
    "hidusage",
    "libloaderapi",
    "objbase",
    "ole2",
    "processthreadsapi",
    "shellapi",
    "shellscalingapi",
    "shobjidl_core",
    "unknwnbase",
    "winbase",
    "windowsx",
    "winerror",
    "wingdi",
    "winnt",
    "winuser",
]
version = "0.3.9"
